Add Verus, uupdate dependencies

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@liquality/bitcoin-swap-provider": "1.11.2",
     "@liquality/client": "1.11.2",
     "@liquality/crypto": "1.11.2",
-    "@liquality/cryptoassets": "^1.7.1",
+    "@liquality/cryptoassets": "file:../cryptoassets",
     "@liquality/ethereum-erc20-provider": "1.11.2",
     "@liquality/ethereum-erc20-scraper-swap-find-provider": "1.11.2",
     "@liquality/ethereum-erc20-swap-provider": "1.11.2",
@@ -66,6 +66,11 @@
     "@liquality/terra-swap-find-provider": "1.11.2",
     "@liquality/terra-swap-provider": "1.11.2",
     "@liquality/terra-wallet-provider": "1.11.2",
+    "@liquality/verus-networks": "file:../../chainabstractionlayer/packages/verus-networks",
+    "@liquality/verus-rpc-fee-provider": "file:../../chainabstractionlayer/packages/verus-rpc-fee-provider",
+    "@liquality/verus-rpc-provider": "file:../../chainabstractionlayer/packages/verus-rpc-provider",
+    "@liquality/verus-swap-provider":"file:../../chainabstractionlayer/packages/verus-swap-provider",
+    "@liquality/verus-utils":"file:../../chainabstractionlayer/packages/verus-utils",
     "@testing-library/vue": "^5.8.2",
     "@thorchain/asgardex-util": "^0.9.1",
     "@uniswap/sdk-core": "^3.0.0",
