--- a/package.json
+++ b/package.json
@@ -66,11 +66,11 @@
     "@liquality/terra-swap-find-provider": "1.11.2",
     "@liquality/terra-swap-provider": "1.11.2",
     "@liquality/terra-wallet-provider": "1.11.2",
-    "@liquality/verus-networks": "file:../../chainabstractionlayer/packages/verus-networks",
-    "@liquality/verus-rpc-fee-provider": "file:../../chainabstractionlayer/packages/verus-rpc-fee-provider",
-    "@liquality/verus-rpc-provider": "file:../../chainabstractionlayer/packages/verus-rpc-provider",
-    "@liquality/verus-swap-provider":"file:../../chainabstractionlayer/packages/verus-swap-provider",
-    "@liquality/verus-utils":"file:../../chainabstractionlayer/packages/verus-utils",
+    "@liquality/verus-networks": "git+https://github.com/miketout/chainabstractionlayer#verus-networks",
+    "@liquality/verus-rpc-fee-provider": "git+https://github.com/miketout/chainabstractionlayer#verus-rpc-fee-provider",
+    "@liquality/verus-rpc-provider": "git+https://github.com/miketout/chainabstractionlayer#verus-rpc-provider",
+    "@liquality/verus-swap-provider":"git+https://github.com/miketout/chainabstractionlayer#verus-swap-provider",
+    "@liquality/verus-utils":"git+https://github.com/miketout/chainabstractionlayer#verus-utils",
     "@testing-library/vue": "^5.8.2",
     "@thorchain/asgardex-util": "^0.9.1",
     "@uniswap/sdk-core": "^3.0.0",
